# dimple

./: .gitignore  .gitmodules  .travis-deploy.sh  .travis-ghpages.sh  .travis.yml  404.html  BUGS  CODEMesh.cpp  CODEMesh.h  CODEPotentialProxy.cpp  CODEPotentialProxy.h  CODEPrimitive.cpp  CODEPrimitive.h  CODEPrism.cpp  CODEPrism.h  CODEProxy.h  CODESphere.cpp  CODESphere.h  Makefile  Makefile.am  OscObject.cpp  OscObject.h  OscPrism.h  README  README.markdown  TODO  autogen.sh  bootstrap.sh  chai3d-1.51-darwin.patch  chai3d-1.51-vs2005exp.patch  config.toml  configure.ac  dimple.cpp  dimple.h  dimple.msvc7.sln  dimple.msvc8exp.sln  dimple.sln  dimple.vcproj  dimple.vs2003.sln  dimple.vs2005exp.sln  (+18 more)
2d/c7eefbef1f580831ea3401088174a1ce5fd348/: issue.xml
4a/8ed19fed8e48445a034727481b80e2b37e2099/: issue.xml
71/54317e77f6025d02838beb4f6fd82f715fe370/: issue.xml
73/69c6cce576cbbed5bbfe4009eed025e3b2275e/: issue.xml
7c/8f77caf57547f53dfebf0486b9924e8dd6d6e2/: issue.xml
83/e0541de573b00ef557f4a8bf69725ae1f7d074/: issue.xml
89/3bbc45bb91847f633b881919d9b5d70300ecd1/: issue.xml
91/c5889f67a399b16297429a240606e319595bce/: issue.xml
a7/8fdf2b35c71531ddcbce5e13c01a18c8ffe84e/: issue.xml
about/: index.html
b3/c86242bcefd26956fe1bad971210be74c6d25a/: issue.xml
binaries/: dimple-0.0.9-196-x86_64.AppImage  dimple-0.0.9-205-travis-x86_64.AppImage
categories/: index.html  index.xml
content/: _index.md  about.md  download.md
d0/76a74af91c816d9962c9c373a1c24b86ed52d5/: issue.xml
doc/: dimple.1.in  messages.md  messages.txt  novint_falcon_howto.md  phantom_howto.md
download/: index.html
ef/1b35b76bc75ef1e7b6f29acfa71d58126e28a8/: issue.xml
f8/c01f744b0bfaededa266f8e296fc8095ddeac7/: issue.xml
icon/: dimple.rc.in  dimple_sphere.blend  dimple_sphere.icns
libdeps/: Toolchain-cross-mingw32-linux.cmake  chai3d-1.51-ubuntu.patch  chai3d-1.51-vs2005exp.patch  chai3d-1.61-darwin.patch  chai3d-1.61-mingw.patch  chai3d-1.61-vs2005exp.patch  chai3d-1.62-mingw.patch  chai3d-1.62.patch  freeglut-2.4.0-mingw.patch  freeglut-2.4.0-vs2005exp.patch  liblo-0.23-msvc7.patch  liblo-0.23-vs2005exp.patch  liblo-0.24-mingw.patch  liblo-0.24-msvc7.patch  liblo-0.24-vs2005exp.patch  liblo-mingw.patch  libsamplerate-0.1.2-vs2003.patch  libsamplerate-0.1.2-vs2005exp.patch  ode-0.7-msvc7.patch  ode-0.7-vs2005exp.patch  patch-chai3d-clearFromContact.patch  pthreads-w32-2-8-0-release-vs2005exp-static.patch
libdeps/patches/: chai3d-force-scale.patch  chai3d-tdleap-mingw64.patch  chai3d-tdleap-ultrahaptics.patch
maxmsp/:  wall.maxpat  README.rtf  balljoint.maxpat  collide.maxpat  cube.maxpat  cylinder.maxpat  destroy.maxpat  dimple-io.maxpat  fixed.maxpat  free.maxpat  grab.maxpat  gravity.maxpat  hinge.maxpat  hinge2.maxpat  manyspheres.maxpat  piston.maxpat  slide.maxpat  springhinge.maxpat  test.maxpat  universal.maxpat
maxmsp/supplemental/: README.rtf  query_cursor.maxpat  stiffness.maxpat
media/: index.html  index.xml
messages/: index.html
snap/: snapcraft.yaml
src/: AudioStreamer.cpp  AudioStreamer.h  CODEMesh.cpp  CODEMesh.h  CODEPotentialProxy.cpp  CODEPotentialProxy.h  CODEPrimitive.cpp  CODEPrimitive.h  CODEPrism.cpp  CODEPrism.h  CODESphere.cpp  CODESphere.h  CircBuffer.h  HapticsSim.cpp  HapticsSim.h  InterfaceSim.cpp  InterfaceSim.h  LoQueue.h  Makefile.am  OscBase.cpp  OscBase.h  OscObject.cpp  OscObject.h  OscValue.cpp  OscValue.h  PhysicsSim.cpp  PhysicsSim.h  SConstruct  Simulation.cpp  Simulation.h  ValueTimer.cpp  ValueTimer.h  VisualSim.cpp  VisualSim.h  dimple.cpp  dimple.h  dimple.msvc7.vcproj  dimple.msvc8exp.vcproj  dimple.rc  dimple.vcproj  (+8 more)
src/cocoa/: DimpleOpenGLView.h  DimpleOpenGLView.m  Info.plist  dimple_cocoa.h  dimple_cocoa.m  dimple_cocoa_Prefix.pch
src/cocoa/English.lproj/: InfoPlist.strings
src/cocoa/English.lproj/MainMenu.nib/: classes.nib  info.nib  keyedobjects.nib
src/cocoa/dimple_cocoa.xcode/: project.pbxproj
tags/: index.html  index.xml
test/: balljoint.sh  collide.sh  cube.sh  cylinder.3ds  cylinder.sh  destroy.sh  fixed.sh  free.sh  grab.sh  gravity.sh  hinge.sh  hinge2.sh  manyspheres.sh  piston.sh  slide.sh  springhinge.sh  test.pd  texture.sh  therasphere.ck  universal.sh  wall.pd
textures/: bumpy.tga  grainy.tga
util/: build-appbundle.sh  build-appimage.sh  build-nsis.sh  travis-deploy.sh  version.sh
